<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="app_name">Allergy Diary</string> 
    <string name="allergie_keine_angabe">unknown \</string> <!-- Leerzeichen ist workaround fur rechts clip von italic font -->
    <string name="allergie_keine">none \</string>
    <string name="allergie_leicht">slightly \</string>
    <string name="allergie_mittel">medium \</string>
    <string name="allergie_schwer">heavy \</string>
    <string name="allergie_sehr_schwer">worst \</string>
    <string name="keine_daten_erfasst">No data available.</string>
    <string name="heute">today</string>
    <string name="tag_so">Su</string>
    <string name="tag_mo">Mo</string>
    <string name="tag_di">Tu</string>
    <string name="tag_mi">We</string>
    <string name="tag_do">Th</string>
    <string name="tag_fr">Fr</string>
    <string name="tag_sa">Sa</string>
    <string name="allerg_beschwerden">allergic ailment</string>
    <string name="medikamente">drugs</string>
    <string name="eigene_stichworte">own keywords</string>
    <string name="kommentar">memo</string>  
    <string name="confirmTagDelete">The keyword \"%s\" will be deleted from all records in complete diary. Are you sure?</string>
    <string name="ja">yes</string>
    <string name="nein">no</string>
    <string name="ok">OK</string>   
    <string name="tag_doppelt_erfasst">\"%s\" is duplicate and will be ignored.</string>   
    <string name="statistiken">statistics</string>   
    <string name="about">about</string>
    <string name="about_content">Author: Thorsten Prölß\n\nFeedback is welcome (<a href="mailto:AllergieTagebuch@thoca.de">AllergieTagebuch@thoca.de</a>)\n\nCredits to <a href="http://androidplot.com">AndroidPlot</a> for the chart library!</string>   
    <string name="art_der_statistik">kind of statistic</string>   
    <string name="zeitraum">time period</string>   
    <string name="jahr">year</string>
    <string name="monat">month</string>      
    <string name="berechnen">calculate</string>    
    <string name="statistik_allerg_keine">none</string>
    <string name="statistik_allerg_leicht">slight.</string>
    <string name="statistik_allerg_mittel">med.</string>
    <string name="statistik_allerg_schwehr">heavy</string>
    <string name="statistik_allerg_sehr_schwehr">worst</string>    
    <string name="statistik_monat_jan">jan</string>
    <string name="statistik_monat_feb">feb</string>
    <string name="statistik_monat_mrz">mar</string>
    <string name="statistik_monat_apr">apr</string>
    <string name="statistik_monat_mai">may</string>
    <string name="statistik_monat_jun">jun</string>
    <string name="statistik_monat_jul">jul</string>
    <string name="statistik_monat_aug">aug</string>
    <string name="statistik_monat_sep">sep</string>
    <string name="statistik_monat_okt">oct</string>
    <string name="statistik_monat_nov">nov</string>
    <string name="statistik_monat_dez">dec</string>    
    <string name="statistik_monat">month</string>
    <string name="statistik_tag">day</string>  
    <string name="statistik_beschwerden">ailments</string>  
    <string name="notizen">memos</string>
    <string name="ein_jahr">one year</string>
    <string name="ein_monat">one month</string>         
    <string name="monat_jan">january</string>
    <string name="monat_feb">february</string>
    <string name="monat_mrz">march</string>
    <string name="monat_apr">april</string>
    <string name="monat_mai">may</string>
    <string name="monat_jun">june</string>
    <string name="monat_jul">july</string>
    <string name="monat_aug">august</string>
    <string name="monat_sep">september</string>
    <string name="monat_okt">october</string>
    <string name="monat_nov">november</string>
    <string name="monat_dez">december</string>
    <string name="eula_title">EULA</string>
    <string name="eula_accept">accept</string>
    <string name="eula_refuse">refuse</string>       
</resources>
